style.css
body {
    padding-top: 10px;
    display: block;
  }
.logo {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 40%;
  }
.subheading {
    color: orange;
    font-family: sans-serif;
  }
#button {
    color: white;
    background-color: blue;
  }

